--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
   "name": "serum-fortune-crank",
   "type": "module",
-  "version": "1.0.0"
+  "version": "1.0.0",
+  "dependencies": {
+    "@solana/web3.js": "0.87.1",
+    "@project-serum/serum": "0.13.13",
+    "typescript": "4.1.2"
+  }
 }
